--- a/index.html
+++ b/index.html
@@ -1,40 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css" >
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <header>
-            <table id="htable">
-                <tr>
-                    <td id="vert-td-top">
-                        <div class="image">
-                            <img src="img/logo.png" alt="logo" id="logo">
-                        </div>
-                    </td>
-                    <td>
-                        <h2>Doc McStuffings</h2>
-                    </td>
-                    <td id="vert-td-bottom">
-                        <p class="">Today's Date: <span id="date"></span></p>
-                    </td>
-                </tr>
-            </table>
-        </header>
-        <hr>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <header>
+      <table id="htable">
+        <tr>
+          <td id="vert-td-top">
+            <div class="image">
+              <img src="img/logo.png" alt="logo" id="logo" />
+            </div>
+          </td>
+          <td>
+            <h2>Doc McStuffings</h2>
+          </td>
+          <td id="vert-td-bottom">
+            <p class="">Today's Date: <span id="date"></span></p>
+          </td>
+        </tr>
+      </table>
+    </header>
+    <hr />
 
-        <form action=""thankyou.html>
-            <center>
-                <div class="format">
-                    <table>
-                        <tr>
-                            <th colspan="4">Create Account</th>
-                        </tr>
-                    </table>
-                </div>
-            </center>
-
-        </form>
-    </body>
+    <form action="" thankyou.html>
+      <center>
+        <div class="format">
+          <table>
+            <!-- Create Account Name(fname, minitial, lname) -->
+            <tr>
+              <th colspan="4">Create Account</th>
+            </tr>
+            <tr>
+              <td><label for="fname">First Name</label></td>
+              <td>
+                <input
+                  type="text"
+                  name="fname"
+                  id="fname"
+                  maxlenght="30"
+                  required="required"
+                  placeholder="John"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td><label for="minitial">Middke Initial</label></td>
+              <td>
+                <input
+                  type="text"
+                  name="minitial"
+                  id="minitial"
+                  maxlenght="1"
+                  required="required"
+                  placeholder="T"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td><label for="lname">Last Name</label></td>
+              <td>
+                <input
+                  type="text"
+                  name="lname"
+                  id="lname"
+                  maxlenght="30"
+                  required="required"
+                  placeholder="Snow"
+                />
+              </td>
+            </tr>
+            <!--  Gender -->
+              <tr>
+                <td><label for="">Gender:</label></td>
+                <td>
+                    <input type="radio" id="g1" name="pgender" value="Male">
+                    <input type="radio" id="g2" name="pgender" value="Female">
+                    <input type="radio" id="g3" name="pgender" value="Other">
+                </td>
+              </tr>
+          </table>
+        </div>
+      </center>
+    </form>
+  </body>
 </html>
