--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <tr>
           <td id="vert-td-top">
             <div class="image">
-              <img src="img/logo.png" alt="logo" id="logo" />
+              <img src="images/BabyBunny.jpg" alt="Rusted machine bunny with a syringe in froont" id="logo" />
             </div>
           </td>
           <td>
